--- a/inspiration.html
+++ b/inspiration.html
@@ -32,8 +32,8 @@
   <a href="https://www.pinterest.com/annaalewis17/carving/">
     <p> <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">Patterns for chip carving (Looks a lot like quilt patterns)</a></p>
     <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">
-      <p> <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">Patterns for chip carving (Looks a lot like quilt patterns)</a></p>
-      <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">
+      <p> <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">Relief carvings and dioramas</a></p>
+
 
         <hr>
         <p>Anna Lewis Campbell</p>
