--- a/inspiration.html
+++ b/inspiration.html
@@ -33,7 +33,7 @@
     <p> <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">Patterns for chip carving (Looks a lot like quilt patterns)</a></p>
     <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">
       <p> <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">Relief carvings and dioramas</a></p>
-
+      <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">
 
         <hr>
         <p>Anna Lewis Campbell</p>
