changes and bucket

--- a/tools.html
+++ b/tools.html
@@ -27,7 +27,7 @@
   </section>
   <h2>Tools of the Trade</h2>
     <p>I use a number of tools to make my work, large and small. Most are inexpensive and easy to obtain. Here are a few of my go-to tools.</p>
-    <img class="dumping" src="bucket.png" alt="A bucket dumping out tools">
+    <img class="dumping" src="bucketnoback.png" alt="A bucket dumping out tools">
 <section class= "sanderblock">
 <img src="sandernoback.png" alt="a belt sander">
   <p>Sander: This is a belt sander, which is probably the most expensive tool in the bucket. It can be used to put a smooth finish on wide surfaces. </p>
