--- a/how-to.html
+++ b/how-to.html
@@ -39,7 +39,7 @@
     <p>From the 1/4 inch mark, cut in a sloping fashion up to the top, gradually thinning the tip to match the edges of the circle. </p>
     <p> img pending </p>
     <h2> Step 5 </h2>
-    <p> Make a mark 1/8 in from the top all the way around, then another 1/4 inch below that, then another 1/8 inch below that.
+    <p> Make a mark 1/8 in from the top all the way around, then another 3/8 inch above the bottom ridge, then another 3/16 inch below that.
     <p> img pending </p>
     <h2> Step 6 </h2>
     <p> Cut your slope up to the lowest mark. Then cut from the mark just above it to make a lopsided valley.</p>
