--- a/how-to.html
+++ b/how-to.html
@@ -28,30 +28,30 @@
   <h2> How to make a pawn</h2>
   <h2> Step 1 </h2>
     <p> Draw it out and measure. <br> Measuring is the most important step, because there are no do-overs with wood. </p>
-    <p> img pending </p>
+    <img class="steps" src= "measure.jpg" alt="A paper marked with measurements shows a pawn that is 1 inch wide and 1 and 1/4 inches tall.">
     <h2> Step 2 </h2>
     <p> Make a mark 1/4 inch from the bottom of your 1 inch by 1 inch dowel. Continue this mark around the dowel so that the 1/4 inch line is visible from all sides.</p>
-    <p> img pending </p>
+    <img class="steps" src= "quarterinch.jpg" alt="A 1 inch pine dowel marked with a line a quarter inch from the bottom.">
     <h2> Step 3 </h2>
     <p> From the top of the dowel, measure a 1/2 in diameter circle in the center. This can be done by making marks every so often at 1/4 inch distance fromt the edge of the dowel if you do not have a protractor. </p>
-    <p> img pending </p>
+    <img class="steps" src= "circle.jpg" alt="The top of a dowel marked with a 1/2 inch diameter circle in the center.">
     <h2> Step 4 </h2>
     <p>From the 1/4 inch mark, cut in a sloping fashion up to the top, gradually thinning the tip to match the edges of the circle. </p>
-    <p> img pending </p>
+    <img class="steps" src="slope.jpg" alt="A dowel, tapered from 1 inch near the bottom to 1/2 an inch at the top.">
     <h2> Step 5 </h2>
     <p> Make a mark 1/8 in from the top all the way around, then another 3/8 inch above the bottom ridge, then another 3/16 inch below that.
-    <p> img pending </p>
+    <img class="steps" src="marks.jpg" alt="A dowel with marks 3/8 above the bottom ridge, 3/16 above that, and 1/8 inch from the top.">
     <h2> Step 6 </h2>
     <p> Cut your slope up to the lowest mark. Then cut from the mark just above it to make a lopsided valley.</p>
-    <p> img pending </p>
+    <img class="steps" src="valley" alt="A dowel with lopsided valley cut into the sides, extending from 1/4 inch above the bottom to about 2/3 of the way up the dowel."
     <h2> Step 7 </h2>
     <p> Cut from the top mark to the top of the dowel, rounding off the head of the pawn.</p>
-    <p> img pending </p>
+    <img class="steps" src="rounded" alt="An almost finsihed pawn, with the top having just been rounded into a knob.">
     <h2> Step 8 </h2>
     <p> Sand off all the rough edges.</p>
-    <p> img pending </p>
+    <img class="steps" src="sanded" alt="A freshly finished pawn.">
     <h2> Project complete! </h2>
-    <p> img pending </p>
+
 
     <hr>
     <p>Anna Lewis Campbell</p>
