--- a/how-to.html
+++ b/how-to.html
@@ -43,13 +43,13 @@
     <img class="steps" src="marks.jpg" alt="A dowel with marks 3/8 above the bottom ridge, 3/16 above that, and 1/8 inch from the top.">
     <h2> Step 6 </h2>
     <p> Cut your slope up to the lowest mark. Then cut from the mark just above it to make a lopsided valley.</p>
-    <img class="steps" src="valley" alt="A dowel with lopsided valley cut into the sides, extending from 1/4 inch above the bottom to about 2/3 of the way up the dowel."
+    <img class="steps" src="valley.jpg" alt="A dowel with lopsided valley cut into the sides, extending from 1/4 inch above the bottom to about 2/3 of the way up the dowel."
     <h2> Step 7 </h2>
     <p> Cut from the top mark to the top of the dowel, rounding off the head of the pawn.</p>
-    <img class="steps" src="rounded" alt="An almost finsihed pawn, with the top having just been rounded into a knob.">
+    <img class="steps" src="rounded.jpg" alt="An almost finsihed pawn, with the top having just been rounded into a knob.">
     <h2> Step 8 </h2>
     <p> Sand off all the rough edges.</p>
-    <img class="steps" src="sanded" alt="A freshly finished pawn.">
+    <img class="steps" src="sanded.jpg" alt="A freshly finished pawn.">
     <h2> Project complete! </h2>
 
 
