--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ is, it's sort of a strange story. One day, I just woke up with the desire to lea
 that can carve?" They told me they thought one of my uncles could carve. So little Anna sat down and wrote him a good old-fashioned snail mail
 letter to ask him to teach me to carve. Now my uncle lived 5 hours away, and there was no way he'd be able to teach me. But he sent me some supplies:
 a set of chisels, a tabletop workspace, and some cedar. I got to work teaching myself. The first few tries were fun, but awful. But I kept at it and
-read books and watch videos, and eventually, I got pretty good. Now I make lots of big and small knick-knacks for myself, friends, and family. And
+read books and watched videos, and eventually, I got pretty good. Now I make lots of big and small knick-knacks for myself, friends, and family. And
 so can you! This is a site dedicated to people who are just getting started. Take a look around and figure out what you want to try!</p>
 </section>
 <h2>What is woodcarving/whittling?</h2>
