--- a/inspiration.html
+++ b/inspiration.html
@@ -28,12 +28,16 @@
   <h2> Finding inspiration </h2>
   <p> If you're interested in getting started in woodcarving, all you need to do is get some tools, learn how to use them safely, and find some ideas!</p>
   <p> I've got a few collections here for you to look at to get inspired.</p>
+<section>
   <p> <a href="https://www.pinterest.com/annaalewis17/carving/">Anna's Pinterest board</a></p>
   <a href="https://www.pinterest.com/annaalewis17/carving/">
+    <img class="icon" src="chisel.png">
+  </section>
     <p> <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">Patterns for chip carving (Looks a lot like quilt patterns)</a></p>
     <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">
-      <p> <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">Relief carvings and dioramas</a></p>
-      
+      <img class="icon" src="chip.png">
+      <p> <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">Relief carvings and dioramas</p>
+      <img class="icon" src="saw.png"></a>
 
         <hr>
         <p>Anna Lewis Campbell</p>
