--- a/photos.html
+++ b/photos.html
@@ -29,7 +29,7 @@
     </nav>
   </section>
   <h2> Project Photos </h2>
-  <p> Sometimes woodworking can seem daunting, especially to a beginner. <br> But not to worry! I was able to do many of these projects within the first year or two. <br> You'll get better,
+  <p class="intro"> Sometimes woodworking can seem daunting, especially to a beginner. <br> But not to worry! I was able to do many of these projects within the first year or two. <br> You'll get better,
     learn some things, and have new plans and ideas. It's okay if it takes a couple tries. </p>
     <h2> Chess Set </h2>
   <section class= "pictextblock">
@@ -39,7 +39,7 @@
 </section>
   <h2> Lightswitch cover </h2>
 <section class= "pictextblock">
-        <p class="texttoright"> Who wants a boring plastic lightswitch cover? I've always loved castles and other medieval thingsand I wanted to add a little castle to my room.</p>
+        <p class="texttoright"> Who wants a boring plastic lightswitch cover? I've always loved castles and other medieval things and I wanted to add a little castle to my room.</p>
 <img class="photoright" src= "stainedswitch.jpg" alt="a relief carving of a castle on a wooden lightswitch cover">
 </section>
 <h2> Dad's Cane </h2>
