--- a/tools.html
+++ b/tools.html
@@ -25,7 +25,7 @@
     </ul>
     </nav>
   </section>
-  <h2>Tools of the Trade</h2>
+  <h2>A Bucketload of Tools</h2>
     <p>I use a number of tools to make my work, large and small. Most are inexpensive and easy to obtain. Here are a few of my go-to tools.</p>
     <img class="dumping" src="bucketnoback.png" alt="A bucket dumping out tools">
 <section class= "sanderblock">
