--- a/how-to.html
+++ b/how-to.html
@@ -39,11 +39,11 @@
     <p>From the 1/4 inch mark, cut in a sloping fashion up to the top, gradually thinning the tip to match the edges of the circle. </p>
     <img class="steps" src="slope.jpg" alt="A dowel, tapered from 1 inch near the bottom to 1/2 an inch at the top.">
     <h2> Step 5 </h2>
-    <p> Make a mark 1/8 in from the top all the way around, then another 3/8 inch above the bottom ridge, then another 3/16 inch below that.
+    <p> Make a mark 1/8 in from the top all the way around, then another 3/8 inch above the bottom ridge, then another 3/16 inch below that.</p>
     <img class="steps" src="marks.jpg" alt="A dowel with marks 3/8 above the bottom ridge, 3/16 above that, and 1/8 inch from the top.">
     <h2> Step 6 </h2>
     <p> Cut your slope up to the lowest mark. Then cut from the mark just above it to make a lopsided valley.</p>
-    <img class="steps" src="valley.jpg" alt="A dowel with lopsided valley cut into the sides, extending from 1/4 inch above the bottom to about 2/3 of the way up the dowel."
+    <img class="steps" src="valley.jpg" alt="A dowel with lopsided valley cut into the sides, extending from 1/4 inch above the bottom to about 2/3 of the way up the dowel.">
     <h2> Step 7 </h2>
     <p> Cut from the top mark to the top of the dowel, rounding off the head of the pawn.</p>
     <img class="steps" src="rounded.jpg" alt="An almost finsihed pawn, with the top having just been rounded into a knob.">
