--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <hr>
     <section>
     <nav>
-    <ul class="menu">
+    <ul id="menu_nav" class="menu">
     <li class="menu-item"><a href="index.html"> Home</a></li>
     <li class="menu-item"><a href="photos.html">Photos</a></li>
     <li class="menu-item"><a href="tools.html"> Tools</a></li>
     <li class="menu-item"><a href="how-to.html">How-to</a></li>
     <li class="menu-item"><a href="inspiration.html">Inspiration</a></li>
     </ul>
+      <button id="menu_trigger">☰</button>
     </nav>
   </section>
 <h2> Meet Anna </h2>
@@ -48,4 +49,5 @@ and more. Today, machines make much of our furniture and building supplies, but 
 <a href="mailto:aalxbt@umsystem.edu">aalxbt@umsystem.edu</a>
 
   </body>
+  <script src="main.js" type="text/javascript"></script>
   </html>
