--- a/how-to.html
+++ b/how-to.html
@@ -16,13 +16,14 @@
     <hr>
     <section>
     <nav>
-    <ul class="menu">
+    <ul id="menu_nav" class="menu">
     <li class="menu-item"><a href="index.html"> Home</a></li>
     <li class="menu-item"><a href="photos.html">Photos</a></li>
     <li class="menu-item"><a href="tools.html"> Tools</a></li>
     <li class="menu-item"><a href="how-to.html">How-to</a></li>
     <li class="menu-item"><a href="inspiration.html">Inspiration</a></li>
     </ul>
+      <button id="menu_trigger">☰</button>
     </nav>
   </section>
   <h2> How to make a pawn</h2>
@@ -58,4 +59,5 @@
     <a href="mailto:aalxbt@umsystem.edu">aalxbt@umsystem.edu</a>
 
       </body>
+        <script src="main.js" type="text/javascript"></script>
       </html>
