--- a/tools.html
+++ b/tools.html
@@ -35,7 +35,7 @@
 </section>
 <section class= "fileblock">
 <img src="filenoback.png" alt="a triangular file">
-  <p>Triangular file: This file can be used to get a smoot finish and a sharp shape on tiny little corners and crevices.</p>
+  <p>Triangular file: This file can be used to get a smooth finish and a sharp shape on tiny little corners and crevices.</p>
 </section class= "pocketknifeblock">
 <section>
 <img src= "pocketknifenoback.png" alt="a chip-carving pocket knife">
