--- a/inspiration.html
+++ b/inspiration.html
@@ -32,13 +32,13 @@
 <section>
   <p> <a href="https://www.pinterest.com/annaalewis17/carving/">Anna's Pinterest board</a></p>
   <a href="https://www.pinterest.com/annaalewis17/carving/">
-    <img class="icon" src="chisel.png">
+    <img class="icon" src="chisel.png" alt="An icon of a vertical chisel">
   </section>
     <p> <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">Patterns for chip carving (Looks a lot like quilt patterns)</a></p>
     <a href="https://www.pinterest.com/metinsevlug/chip-carving-patterns/">
-      <img class="icon" src="chip.png">
+      <img class="icon" src="chip.png" alt="An icon of a chip carving knife">
       <p> <a href="https://www.pinterest.com/artfour/fine-carved-wood-dioramas-steiner-meran/">Relief carvings and dioramas</p>
-      <img class="icon" src="saw.png"></a>
+      <img class="icon" src="saw.png" alt= "an icon of a workbench with a saw"></a>
 
         <hr>
         <p>Anna Lewis Campbell</p>
