--- a/photos.html
+++ b/photos.html
@@ -45,7 +45,7 @@
 </section>
 <h2> Dad's Cane </h2>
 <section class="pictextblock">
-      <img class="photoleft" src= "dadscane.jpg" alt+"Anna and her dad, Ed, stand in front of their home with Ed holding a cane carved with vine patterns">
+      <img class="photoleft" src= "dadscane.jpg" alt="Anna and her dad, Ed, stand in front of their home with Ed holding a cane carved with vine patterns">
         <p class="texttoleft"> When my dad had hip surgery, I set out to make him a cane that was more stylish than titanium. This cane has vine patterns swirling up to the handle.</p>
   </section>
     <h2> Picture Frame </h2>
