--- a/tools.html
+++ b/tools.html
@@ -38,11 +38,11 @@
   <p>Triangular file: This file can be used to get a smooth finish and a sharp shape on tiny little corners and crevices.</p>
 </section class= "pocketknifeblock">
 <section>
-<img src= "pocketknifenoback.png" alt="a chip-carving pocket knife">
+<img src= "pocketknifenoback.png" alt="a chip-carving pocket knife with a walnut handle">
   <p>Chip-carving pocket knife: This one has a large and small blade. <br> While it's made for chip-carving, I use it for all my whittling.</p>
 </section>
 <section class= "copingsawblock">
-<img src="copingsawnoback.png" alt="A coping saw">
+<img src="copingsawnoback.png" alt="A coping saw with a thin flexible blade">
   <p>Coping saw: This saw makes it easy to cut complex shapes. The blade bends and rotates so that you can follow an outline while cutting.</p>
 </section>
 <br>
